kubernetes/utility/writerite.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: writerite
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    kubernetes.io/ingress.global-static-ip-name: "writerite-ingress"
spec:
  backend:
    serviceName: writerite-backend-yoga
    servicePort: 4000
  rules:
  - host: ritewrite.site
    http:
      paths:
      - path: /*
        backend:
          serviceName: writerite-backend-yoga
          servicePort: 4000
  tls:
  - hosts:
    - ritewrite.site
    secretName: ritewritesite-tls-production
